add in range color

--- a/src/main/resources/assets/hitrange/lang/en_us.json
+++ b/src/main/resources/assets/hitrange/lang/en_us.json
@@ -5,6 +5,7 @@
   "hitrange.renderMode": "Render Mode",
   "hitrange.thickness": "Thickness",
   "hitrange.color": "Color",
+  "hitrange.inRangeColor": "In Range Color",
   "hitrange.randomColors": "Random Colors",
   "hitrange.height": "Height",
   "hitrange.mode.line": "Line",
