--- a/src/main/resources/assets/hitrange/lang/en_us.json
+++ b/src/main/resources/assets/hitrange/lang/en_us.json
@@ -8,6 +8,7 @@
   "hitrange.inRangeColor": "In Range Color",
   "hitrange.randomColors": "Random Colors",
   "hitrange.height": "Height",
+  "hitrange.nearestOnly": "Nearest Player Only",
   "hitrange.mode.line": "Line",
   "hitrange.mode.thick": "Thick",
   "hitrange.mode.filled": "Filled"
