--- a/src/main/resources/assets/hitrange/lang/en_us.json
+++ b/src/main/resources/assets/hitrange/lang/en_us.json
@@ -9,7 +9,9 @@
   "hitrange.randomColors": "Random Colors",
   "hitrange.height": "Height",
   "hitrange.nearestOnly": "Nearest Player Only",
+  "hitrange.showSelf": "Show Own Circle",
   "hitrange.preventZFight": "Prevent Z Fighting",
+  "hitrange.maxDistance": "Max Drawing Distance",
   "hitrange.maxSearchDistance": "Max Search Distance",
   "hitrange.computeAngles": "Recalculate Angles",
   "hitrange.mode.line": "Line",
