add change color when in range option

--- a/src/main/resources/assets/hitrange/lang/en_us.json
+++ b/src/main/resources/assets/hitrange/lang/en_us.json
@@ -7,6 +7,7 @@
   "hitrange.color": "Color",
   "hitrange.inRangeColor": "In Range Color",
   "hitrange.randomColors": "Random Colors",
+  "hitrange.colorWhenInRange": "Change Color When In Range",
   "hitrange.height": "Height",
   "hitrange.nearestOnly": "Nearest Player Only",
   "hitrange.showSelf": "Show Own Circle",
